--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A habit tracker web application",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sandipan Saha",
@@ -12,6 +13,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.3",
     "nodemon": "^2.0.22"
   }
